--- a/index.html
+++ b/index.html
@@ -441,6 +441,8 @@
             mat4.rotate(m1,m1,tiempo*2*Math.PI/anio,[0,-1,0]);         
             // Item 3) La tierra tiene su eje inclinado de 23 grados respecto del eje +Y (arriba).
             mat4.rotate(m1,m1,Math.PI/7.8,[0,0,1]);
+            // Item 4) La tierra rota sobre su eje (ciclo del día)
+            mat4.rotate(m1,m1,tiempo*2*Math.PI/anio*365,[0,1,0]); // Rotacion 2*pi cada 1 dia
             
             setTransform(tierra,m1);
 
